# AI-Based-Subsurface-Mineral-Deposit-Estimation-from-Geophysical-Surveys

./: .gitignore  README.md  app.py  convert_to_onnx.py  deposit_3d.npy  evaluate.py  generate_data.py  mean_volume.npy  mineral_exploration_system.py  model.py  predict_and_rank.py  requirements.txt  seismic_surface.npy  train.py  uncertainty_volume.npy  vercel.json
api/: index.py  mineral_model.onnx  mineral_model.pth  pyproject.toml  requirements.txt
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Sidebar.jsx
