[project]
name = "geovision-api"
version = "0.1.0"
description = "FastAPI backend for GeoVision AI (ONNX Optimized)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "onnxruntime",
]

# No special index needed for onnxruntime (it's standard on PyPI)
